--- a/Mygle.Negocio/Mygle.Negocio.csproj
+++ b/Mygle.Negocio/Mygle.Negocio.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2DFFC20F-57B6-4A26-B388-BCD1E7209FF6}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Mygle.Telas</RootNamespace>
-    <AssemblyName>Mygle.Telas</AssemblyName>
+    <ProjectGuid>{4F4968BB-BC8E-4832-B865-8B60F62DDB29}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Mygle.Negocio</RootNamespace>
+    <AssemblyName>Mygle.Negocio</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,17 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Models\Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Mygle.Negocio\Mygle.Negocio.csproj">
-      <Project>{4f4968bb-bc8e-4832-b865-8b60f62ddb29}</Project>
-      <Name>Mygle.Negocio</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Mygle.Persistencia\Mygle.Persistencia.csproj">
       <Project>{ea70d99f-d2d4-425f-8d38-61b113b1b417}</Project>
       <Name>Mygle.Persistencia</Name>
