Adição de classes e métodos
Adicionadas as classes principais do programa e estruturação de alguns métodos e variáveis.

--- a/Mygle.Negocio/Mygle.Negocio.csproj
+++ b/Mygle.Negocio/Mygle.Negocio.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Class1.cs" />
+    <Compile Include="Models\Gerente.cs" />
+    <Compile Include="Models\Venda.cs" />
+    <Compile Include="Models\Vendedor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
