Criação de classes e métodos
Criada a classe gerente; Criado o menu básico de interação da classe gerente; Criado o método de visualização dos dados inseridos na classe vendedor; Criação da classe Meta.

--- a/Mygle.Negocio/Mygle.Negocio.csproj
+++ b/Mygle.Negocio/Mygle.Negocio.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Gerente.cs" />
+    <Compile Include="Models\Meta.cs" />
     <Compile Include="Models\Venda.cs" />
     <Compile Include="Models\Vendedor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
