--- a/Mygle.Negocio/Mygle.Negocio.csproj
+++ b/Mygle.Negocio/Mygle.Negocio.csproj
@@ -40,17 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gerenciador.cs" />
     <Compile Include="Models\Gerente.cs" />
     <Compile Include="Models\Meta.cs" />
+    <Compile Include="Models\Usuario.cs" />
     <Compile Include="Models\Venda.cs" />
     <Compile Include="Models\Vendedor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Mygle.Persistencia\Mygle.Persistencia.csproj">
-      <Project>{ea70d99f-d2d4-425f-8d38-61b113b1b417}</Project>
-      <Name>Mygle.Persistencia</Name>
-    </ProjectReference>
+    <Folder Include="Persistencia\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
