--- a/Mygle.Grafico/Mygle.Grafico.csproj
+++ b/Mygle.Grafico/Mygle.Grafico.csproj
@@ -47,11 +47,23 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TelaCadastrarUsuario.cs">
+    <Compile Include="TelaCadastroUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TelaCadastrarUsuario.Designer.cs">
-      <DependentUpon>TelaCadastrarUsuario.cs</DependentUpon>
+    <Compile Include="TelaCadastroUsuario.Designer.cs">
+      <DependentUpon>TelaCadastroUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TelaCadastroCategorias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelaCadastroCategorias.Designer.cs">
+      <DependentUpon>TelaCadastroCategorias.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TelaGerenteCategorias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelaGerenteCategorias.Designer.cs">
+      <DependentUpon>TelaGerenteCategorias.cs</DependentUpon>
     </Compile>
     <Compile Include="TelaGerenteDetalhe.cs">
       <SubType>Form</SubType>
@@ -77,6 +89,12 @@
     <Compile Include="TelaGerenteResumo.Designer.cs">
       <DependentUpon>TelaGerenteResumo.cs</DependentUpon>
     </Compile>
+    <Compile Include="TelaUsuarioDetalhe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelaUsuarioDetalhe.Designer.cs">
+      <DependentUpon>TelaUsuarioDetalhe.cs</DependentUpon>
+    </Compile>
     <Compile Include="TelaUsuarioResumo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,8 +110,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="TelaCadastrarUsuario.resx">
-      <DependentUpon>TelaCadastrarUsuario.cs</DependentUpon>
+    <EmbeddedResource Include="TelaCadastroCategorias.resx">
+      <DependentUpon>TelaCadastroCategorias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TelaCadastroUsuario.resx">
+      <DependentUpon>TelaCadastroUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TelaGerenteCategorias.resx">
+      <DependentUpon>TelaGerenteCategorias.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TelaGerenteDetalhe.resx">
       <DependentUpon>TelaGerenteDetalhe.cs</DependentUpon>
@@ -106,6 +130,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TelaGerenteResumo.resx">
       <DependentUpon>TelaGerenteResumo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TelaUsuarioDetalhe.resx">
+      <DependentUpon>TelaUsuarioDetalhe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TelaUsuarioResumo.resx">
       <DependentUpon>TelaUsuarioResumo.cs</DependentUpon>
