--- a/Mygle.Grafico/Mygle.Grafico.csproj
+++ b/Mygle.Grafico/Mygle.Grafico.csproj
@@ -47,11 +47,11 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TelaCadastroUsuario.cs">
+    <Compile Include="TelaCadastrarUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TelaCadastroUsuario.Designer.cs">
-      <DependentUpon>TelaCadastroUsuario.cs</DependentUpon>
+    <Compile Include="TelaCadastrarUsuario.Designer.cs">
+      <DependentUpon>TelaCadastrarUsuario.cs</DependentUpon>
     </Compile>
     <Compile Include="TelaCadastroCategorias.cs">
       <SubType>Form</SubType>
@@ -77,11 +77,11 @@
     <Compile Include="TelaGerenteUsuarios.Designer.cs">
       <DependentUpon>TelaGerenteUsuarios.cs</DependentUpon>
     </Compile>
-    <Compile Include="TelaLogin.cs">
+    <Compile Include="TelaLoginMygle.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TelaLogin.Designer.cs">
-      <DependentUpon>TelaLogin.cs</DependentUpon>
+    <Compile Include="TelaLoginMygle.Designer.cs">
+      <DependentUpon>TelaLoginMygle.cs</DependentUpon>
     </Compile>
     <Compile Include="TelaGerenteResumo.cs">
       <SubType>Form</SubType>
@@ -113,8 +113,8 @@
     <EmbeddedResource Include="TelaCadastroCategorias.resx">
       <DependentUpon>TelaCadastroCategorias.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TelaCadastroUsuario.resx">
-      <DependentUpon>TelaCadastroUsuario.cs</DependentUpon>
+    <EmbeddedResource Include="TelaCadastrarUsuario.resx">
+      <DependentUpon>TelaCadastrarUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TelaGerenteCategorias.resx">
       <DependentUpon>TelaGerenteCategorias.cs</DependentUpon>
@@ -125,8 +125,8 @@
     <EmbeddedResource Include="TelaGerenteUsuarios.resx">
       <DependentUpon>TelaGerenteUsuarios.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TelaLogin.resx">
-      <DependentUpon>TelaLogin.cs</DependentUpon>
+    <EmbeddedResource Include="TelaLoginMygle.resx">
+      <DependentUpon>TelaLoginMygle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TelaGerenteResumo.resx">
       <DependentUpon>TelaGerenteResumo.cs</DependentUpon>
