--- a/Mygle.Negocio/Mygle.Negocio.csproj
+++ b/Mygle.Negocio/Mygle.Negocio.csproj
@@ -41,12 +41,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Gerenciador.cs" />
+    <Compile Include="Models\Categoria.cs" />
     <Compile Include="Models\Gerente.cs" />
     <Compile Include="Models\Meta.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Models\Venda.cs" />
     <Compile Include="Models\Vendedor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validacao.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Persistencia\" />
