--- a/Mygle.Grafico/Mygle.Grafico.csproj
+++ b/Mygle.Grafico/Mygle.Grafico.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -83,6 +84,12 @@
     </Compile>
     <Compile Include="TelaGerenteDetalhe.Designer.cs">
       <DependentUpon>TelaGerenteDetalhe.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TelaGerenteMeta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelaGerenteMeta.Designer.cs">
+      <DependentUpon>TelaGerenteMeta.cs</DependentUpon>
     </Compile>
     <Compile Include="TelaGerenteUsuarios.cs">
       <SubType>Form</SubType>
@@ -137,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TelaGerenteDetalhe.resx">
       <DependentUpon>TelaGerenteDetalhe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TelaGerenteMeta.resx">
+      <DependentUpon>TelaGerenteMeta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TelaGerenteUsuarios.resx">
       <DependentUpon>TelaGerenteUsuarios.cs</DependentUpon>
